<resources>
    <string name="app_name">Kaushalya</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_code">Verification Code</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_get_code">Get Verification Code</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="signin_with_email">Sign In with Email</string>
    <string name="signin_with_phone">Sign In with Phone</string>
    <string name="signin_with_google">Sign In with Google</string>
    <string name="signup_with_email">Sign Up with Email</string>
    <string name="signup_with_phone">Sign Up with Phone</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="trial"> पुष्पराज </string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="profile">Profile</string>
    <string name="fname">First Name</string>
    <string name="mname">Middle Name</string>
    <string name="lname">Last Name</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_mname">Middle Name</string>
    <string name="hint_field">Job Field</string>
    <string name="hint_time">time preferences</string>
    <string name="hint_timeedit">time preferable for you to work</string>
    <string name="hint_fieldedit">field in which job is requested</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_appid">Application ID</string>
    <string name="hint_score">Score of online exam</string>
    <string name="hint_scoreedit">enter the score of exam of our app</string>
    <string name="hint_aadhar">Aadhar Card</string>
    <string name="hint_final">Education Completed</string>
    <string name="hint_age">age</string>
    <string name="phone">Phone Number</string>
    <string name="hint_phonen">4864868548</string>
    <string name="save_and_register">Save and Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recentexams">Recent Exams</string>
    <string name="contactus">Contact us</string>
    <string name="certificates">Certificates</string>
    <string name="aboutkaushalya">About Kaushalya</string>

    <string name="equipments">Equipments</string>
    <string name="courses">Courses</string>
    <string name="job">Job</string>

    <string name="myaccount">My Account</string>
    <string name="mycourses">My Courses</string>
    <string name="joboffers">Job Offers</string>
    <string name="jobapplications">Apply for Jobs</string>
    <string name="equipmentshired">Equipments Hired</string>
    <string name="equipmentsrentoffers">Equipments rent Offers</string>
    <string name="tab3">Tab3</string>
    <string name="my_courses">My Courses</string>
    <string name="all_courses">All Courses</string>
    <string name="btncontinue">Continue</string>
    <string name="explore">Explore</string>
    <string name="course_name">Course Name</string>
    <string name="enroll">Enroll</string>
    <string name="coursedescription">Course description</string>
</resources>
