<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_myaccount"
        android:icon="@drawable/ic_user"
        android:title="@string/myaccount" />

    <item android:title="Course">
        <menu>
            <item
                android:id="@+id/nav_exam"
                android:icon="@drawable/ic_test"
                android:title="@string/recentexams" />

            <item
                android:id="@+id/nav_certificate"
                android:icon="@drawable/ic_certificate"
                android:title="@string/certificates" />
        </menu>
    </item>

    <item android:title="Job">
        <menu>
            <item
                android:id="@+id/nav_joboffers"
                android:icon="@drawable/ic_ebook"
                android:title="@string/joboffers" />
        </menu>

    </item>

    <item android:title="Equipments">
        <menu>
            <item
                android:id="@+id/nav_equipmenthired"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/equipmentshired" />
            <item
                android:id="@+id/nav_equipmentrented"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/equipmentsrentoffers" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_blank"
        android:title="" />

    <item
        android:id="@+id/nav_contactus"
        android:icon="@drawable/ic_phone"
        android:title="@string/contactus" />

    <item
        android:id="@+id/nav_kaushalya"
        android:icon="@drawable/ic_letter_k"
        android:title="@string/aboutkaushalya" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_sign_out_option"
        android:title="@string/btn_sign_out" />

</menu>
