<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FF9CE8F2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:hint="@string/hint_phone"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:background="@color/bg_main"
            android:text="@string/btn_get_code"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_code"
            android:drawablePadding="5dp"
            android:hint="@string/hint_code"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/bg_main"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />
    </LinearLayout>

</android.support.v7.widget.CardView>