<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="#d8f7fb"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/fnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/fnameEdit"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_fname"
                    android:inputType="textPersonName"
                    android:paddingLeft="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#BDBDBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/mnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mname"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/mnameEdit"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_mname"
                    android:inputType="textPersonName"
                    android:paddingLeft="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#BDBDBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#d8f7fb"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/lnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lname"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/lnameEdit"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_lname"
                    android:inputType="textPersonName"
                    android:paddingLeft="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#BDBDBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/phonetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/phoneEdit"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_phonen"
                    android:inputType="number"
                    android:paddingLeft="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#BDBDBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#d8f7fb"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/emailtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="number"
                    android:paddingLeft="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#BDBDBD" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button6"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:text="NEXT"
                    android:textSize="20sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>