<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/transback">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_email_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/materialred"
                android:drawableLeft="@drawable/ic_envelope"
                android:drawablePadding="40dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/signin_with_email"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_phone_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_cell_phone"
                android:drawablePadding="40dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/signin_with_phone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_google_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:drawablePadding="40dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/signin_with_google"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>